--- a/examples/00-classification.ipynb
+++ b/examples/00-classification.ipynb
@@ -83,16 +83,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CaffeNet found.\n"
+      "Downloading pre-trained CaffeNet model...\n",
+      "Traceback (most recent call last):\n",
+      "  File \"../scripts/download_model_binary.py\", line 72, in <module>\n",
+      "    urllib.urlretrieve(\n",
+      "AttributeError: module 'urllib' has no attribute 'urlretrieve'\n"
      ]
     }
    ],
    "source": [
     "import os\n",
     "if os.path.isfile(caffe_root + 'models/bvlc_reference_caffenet/bvlc_reference_caffenet.caffemodel'):\n",
-    "    print 'CaffeNet found.'\n",
+    "    print('CaffeNet found.')\n",
     "else:\n",
-    "    print 'Downloading pre-trained CaffeNet model...'\n",
+    "    print('Downloading pre-trained CaffeNet model...')\n",
     "    !../scripts/download_model_binary.py ../models/bvlc_reference_caffenet"
    ]
   },
@@ -757,21 +761,21 @@
   "example_name": "Image Classification and Filter Visualization",
   "include_in_docs": true,
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.1"
   },
   "priority": 1
  },
